(fix: O3-2840): download button and search icon overlap with the table body.

--- a/packages/esm-appointments-app/src/calendar/patient-list/calenar-patient-list.scss
+++ b/packages/esm-appointments-app/src/calendar/patient-list/calenar-patient-list.scss
@@ -12,3 +12,7 @@
     color: colors.$gray-100;
   }
 }
+
+.table {
+  margin-top: 4px;
+}
